fix: add patch to fix x-overflow on 320px in donate page

--- a/pages/donate/styles/donation-info.css
+++ b/pages/donate/styles/donation-info.css
@@ -928,12 +928,14 @@ width: 301px;
 @media screen and (max-width: 639px) {
     section.donation-info{
         height: 1145px;
+        overflow-x: hidden;
     }
 
     .donation-info-container{
         padding: 30px 10px 40px;
         width: 300px;
-        height: 1333px;
+        /* height: 1333px; */
+        height: 1145px;
         /* margin-left: auto;
         margin-right: auto; */
     }
